<resources>
    <string name="app_name">Dogadjaji u Beogradu</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="dodaj_dogadjaj">Dodaj dogadjaj</string>
    <string name="sacuvaj">Sacuvaj</string>
    <string name="datum">Datum:</string>
    <string name="lokacija">Lokacija:</string>
    <string name="opis">Opis:</string>
    <string name="naziv_dogadjaja">Naziv:</string>
    <string name="sa_uvaj_izmene">Sačuvaj izmene</string>
    <string name="dogadjaji">Dogadjaji</string>
    <string name="prijavi_se">Prijavi se</string>
    <string name="registruj_se">Registruj se</string>
    <string name="odjavi_se">Odjavi se</string>
</resources>